# starlee

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  Makefile  README.md
.codex-plugin/: plugin.json
assets/: bookmarklet.js
docs/: architecture.md  browser-permissions-audit.md  capture-diagnostics-inventory.md  capture-payload.md  chrome-capture-v1-baseline.md  chrome-extension-prd.md  chrome-extension-release.md  chrome-web-store-launch-readiness.md  chrome-web-store-privacy-policy.md  chunking-embedding.md  firefox-extension-prd.md  firefox-extension-release.md  polish-audit.md  prd-chrome-packaging-desktop-integration.md  prd-database.md  prd-desktop-app-polish.md  prd-desktop-app-v1.md  prd-e2ee-multi-device-sync.md  prd-library-organization-marketplace.md  prd.md  release-checklist.md  safari-web-extension-local.md  spotify-passive-sync.md  youtube-capture-debugging.md  youtube-capture-qa.md
gui/: DesktopWindowController.swift  DialogPresenter.swift  FloatingButtonController.swift  FluidBackground.swift  Info.plist  MenuBarIcon.swift  MenuBarSettings.swift  NotificationController.swift  StarleeApp.swift  StarleeClient.swift  StarleeMain.swift  StarleeMenuBar.swift  StatusMenuController.swift
scripts/: bridge-smoke-test.sh  build-gui.sh  inspect-chrome-extension-package.sh  inspect-firefox-extension-package.sh  inspect-safari-extension-package.sh  install-safari-extension.sh  install-service.sh  install.sh  legal-invariants.sh  package-chrome-extension.sh  package-firefox-extension.sh  package-safari-extension.sh  package.sh  starlee-mcp.sh  test-gui.sh  verify-gui-bundle.sh
sensor/: package-lock.json  package.json  playwright.config.js
src/: bundle.rs  capture.rs  chunking.rs  config.rs  documents.rs  embedding.rs  engine.rs  http.rs  identity.rs  index.rs  main.rs  mcp.rs  model.rs  public_fetch.rs  sensor_assets.rs  spotify.rs  sync.rs  topics.rs  vault.rs  vault_backend.rs  youtube.rs
(+58 files in other folders)
